TestSuite/Verification/Error/Parallel/Correctness/Between-Multiple-Devices/Concurrency-Defect/Accelerator-CPU/DPTest.par
DPTest{

dp fibonacci([Int] input):[Int] res {
    res[0] = input[1]
    res[1] = input[0] + input[1]
}

dp incr([Int] input):[Int] res {
	res[INDEX1] = input[INDEX1] + 1
}

seq main() : Int {
    var [Int] initial = init_List([200],1)
    var [Int] result = init_List([200])
    
    /*execute the pattern on node 0 device 0 */
    result = incr<<<7,[0,0,0],[0,2,0]>>>(initial)
    
    
    for var Int i = 0; i < 200; i++ {
		if (result[i] != 8) {
			print("The result is not correct!")
			exit(1)
		}
	}
    
return 0 
}}
